[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/PoisonBlower.gd" type="Script" id=1]
[ext_resource path="res://PoisonBubble.tscn" type="PackedScene" id=2]
[ext_resource path="res://res/exported/sprites/light.png" type="Texture" id=6]

[node name="PoisonBlower" type="Sprite"]
scale = Vector2( 0.5, 0.5 )
centered = false
offset = Vector2( -15, -6 )
script = ExtResource( 1 )
Bullet = ExtResource( 2 )

[node name="BarrelEnd" type="Position2D" parent="."]

[node name="ShootSFX" type="AudioStreamPlayer2D" parent="."]

[node name="MuzzleFlash" type="Light2D" parent="."]
visible = false
texture = ExtResource( 6 )
texture_scale = 0.5
color = Color( 0.866667, 1, 0.533333, 1 )
range_item_cull_mask = 3
shadow_enabled = true
shadow_gradient_length = 300.0
shadow_filter = 5
shadow_filter_smooth = 64.0
shadow_item_cull_mask = 3
